--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Application</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="card">
+        <div class="favorites-section">
+            <button id="toggleFavorites">❤️ Favorites</button>
+            <!-- <h3>Favorites</h3> -->
+            <ul id="favoritesList" class="favorites-list" style="display: none;"></ul>
+          </div>          
         <div class="search">
             <input type="text" placeholder="enter city name" spellcheck="false">
             <button><img src="images/search.png"></button>
@@ -19,6 +25,9 @@
             <img src="images/rain.png" class="weather-icon">
             <h1 class="temp">22°C</h1>
             <h2 class="city">New York</h2>
+            <button id="addToFavorites" title="Add to Favorites">
+                <i class="fa-solid fa-star"></i>
+              </button>              
             <div class="details">
                 <div class="col">
                     <img src="images/humidity.png">
@@ -36,62 +45,14 @@
                 </div>
             </div>
         </div>
+        <div class = "clear">
+            <button id="clearBtn" title="Clear Last Search"><i class="fa-solid fa-trash"></i></button>
+        </div>
     </div>
 
-    <script>
-        const apikey = "7cb09121ae1ba5eb0409ec2c1d39e587";
-        const apiurl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
-
-        const searchBox = document.querySelector(".search input");
-        const searchBtn = document.querySelector(".search button");
-        const weatherIcon = document.querySelector(".weather-icon");
-
-        async function checkWeather(city) {
-            const response = await fetch(apiurl + city + `&appid=${apikey}`);
-            if(response.status == 404){
-                document.querySelector(".error").style.display = "block";
-                document.querySelector(".weather").style.display = "none";
-            }
-            else{
-                var data = await response.json();
-
-            document.querySelector(".city").innerHTML = data.name;
-            document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
-            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-            document.querySelector(".wind").innerHTML = data.wind.speed + " Km/h";
-
-            if(data.weather[0].main == "Clouds"){
-                weatherIcon.src = "images/clouds.png";
-            }
-            else if(data.weather[0].main == "Rain"){
-                weatherIcon.src = "images/rain.png";
-            }
-            else if(data.weather[0].main == "Clear"){
-                weatherIcon.src = "images/clear.png";
-            }
-            else if(data.weather[0].main == "Drizzle"){
-                weatherIcon.src = "images/drizzle.png";
-            }
-            else if(data.weather[0].main == "Mist"){
-                weatherIcon.src = "images/mist.png";
-            }
-            else if(data.weather[0].main == "Snow"){
-                weatherIcon.src = "images/snow.png";
-            }
-
-            document.querySelector(".weather").style.display = "block";
-            document.querySelector(".error").style.display = "none";
-            }
-
-        }
-
-        searchBtn.addEventListener("click", ()=>{
-            checkWeather(searchBox.value);
-        })
-
+    <script src = script.js>
 
     </script>
-
-
+    
 </body>
 </html>
